                ChangeLog file for cstructures

Changes in 0.0.1
- Singly-linked list added.