@@ -4,10 +4,13 @@ CC=gcc
 SRC_DIR=src
 BIN_DIR=bin
 
-all: singly_linked_list.o
+all: singly_linked_list.o doubly_linked_list.o
 
 singly_linked_list.o:
 	${CC} -c -o ${BIN_DIR}/singly_linked_list.o ${SRC_DIR}/singly_linked_list.c
+
+doubly_linked_list.o:
+	${CC} -c -o ${BIN_DIR}/doubly_linked_list.o ${SRC_DIR}/doubly_linked_list.c
 
 clean_sources:
 	rm -f ${SRC_DIR}/*~
