@@ -2,3 +2,4 @@
 
 Changes in 0.0.1
 - Singly-linked list added.
+- Doubly-linked list added.
